--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
+    id "org.beryx.jlink" version "2.26.0"
 }
 
 repositories {
@@ -13,6 +14,11 @@ dependencies {
 javafx {
     version = "21"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+application {
+    mainModule = 'myQuestions.main' // Aseta moduulin nimi, joka on määritelty module-info.java -tiedostossa
+    mainClass = 'org.lizkozz.MainClass' // Aseta pääluokan nimi
 }
 
 mainClassName = 'org.lizkozz.MainApp'
