--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,16 @@ javafx {
 
 application {
     mainModule = 'myQuestions.main' // Aseta moduulin nimi, joka on määritelty module-info.java -tiedostossa
-    mainClass = 'org.lizkozz.MainClass' // Aseta pääluokan nimi
+    mainClass = 'org.lizkozz.MainApp' // Aseta pääluokan nimi
 }
 
 jlink {
+    launcher {
+        name = 'myQuestions'
+    }
+}
+
+/*jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
 
     jpackage {
@@ -34,6 +40,6 @@ jlink {
                 '--win-menu-group', 'MyAppGroup'
         ]
     }
-}
+}*/
 
-mainClassName = 'org.lizkozz.MainApp'
+//mainClassName = 'org.lizkozz.MainApp'
