--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ jlink {
     }
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+}
+
 /*jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
 
